fix bug related to accordion item color on mobile (showed up as blue)

--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -16,6 +16,8 @@
 }
 
 button {
+  color: inherit;
+
   &:focus-visible {
     outline: auto 1px;
   }
